--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </div>
 
         <div class="resumebtn">
-          <a href="https://drive.google.com/file/d/14ooo3q0ZvqOjkWby_LASHdu2szcn7Zkd/view?usp=drivesdk" target="_blank"
+          <a href="https://drive.google.com/file/d/1xFM9dudX4TlNArpCAk_ze9lNUyNMq_wU/view?usp=sharing" target="_blank"
             class="btn"><span>Resume</span>
             <i class="fas fa-chevron-right"></i>
           </a>
