--- a/index.html
+++ b/index.html
@@ -238,6 +238,20 @@
           </div>
         </div>
       </div>
+
+
+     <div class="container right">
+        <div class="content">
+          <div class="tag">
+            <h2>Skyscanner</h2>
+          </div>
+          <div class="desc">
+              <h3>Front-End Software Engineering virtual experience programmed</h3>
+              <p>September 2024</p>
+          </div>
+        </div>
+      </div>
+    
   </div>
 
   <div class="morebtn">
